--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,2 +1,2 @@
-{% for css in page.css-list %}<link href="{{ site.baseurl }}/{{ css }}" rel="stylesheet" />{% endfor %}
+{% for css in page.css-list %}<link href="{{ site.baseurl }}/{{ css }}" target="_blank" rel="stylesheet" />{% endfor %}
 {% for javascript in page.javascript-list %}    <script defer src="{{ site.baseurl }}/{{ javascript }}"></script>{% endfor %}
