--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
     <img class="arrrmada" src="{{ site.baseurl }}/assets/img/logo/arrrmada.png" />
     <p>
       ARRRmada.com is open source and maintained by the
-      community. Help improve this site on <a href="{{ site.readme }}">Github</a>!
+      community. Help improve this site on <a href="{{ site.readme }}" target="_blank">Github</a>!
     </p>
   </div>
   <div>
     <img class="discord" src="{{ site.baseurl }}/assets/img/site/discord-pirate.png" />
-    <p>For all inquiries, questions, and discussions, chat with us in the community <a href="https://pirate.black/discord">DISCORD</a></p>
+    <p>For all inquiries, questions, and discussions, chat with us in the community <a href="https://pirate.black/discord" target="_blank">DISCORD</a></p>
   </div>
 </footer>
 <a href="#" id="return-to-top" title="Go to top"></a>
