--- a/assets/css/gateways.css
+++ b/assets/css/gateways.css
@@ -158,3 +158,53 @@
     width: 100%;
     object-fit: contain;
 }
+
+/* ----- mobile width adjustments ----- */
+@media screen and (max-width:500px) {
+    .hero-section  {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+    .btn {
+        width: 100%;
+        min-width: 100px;
+        padding: 10px 5px;
+        margin: 8px auto;
+        max-width: 200px;
+    }
+    .hero-section h1 {
+        font-size: 30px;
+    }
+    .hero-section strong {
+        font-size: 20px;
+    }
+    .hero-section p {
+        font-size: 16px;
+    }
+    .gateway-explanation {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+    .gateway-explanation .p {
+        max-width: 140px;
+    }
+    .gateway-explanation h2 {
+        font-size: 26px;
+    }
+    .gateway-explanation .solutions {
+        display: none;
+    }
+    .divider {
+        display: none;
+    }
+    .content {
+        padding: 0px;
+    }
+    .gateway-listings-section {
+        padding-top: 80px;
+    }
+    .gateway-listings-section .gateway-box {
+        margin: 20px auto;
+        min-height: 500px;
+    }
+}
