Using flexbox/grid architecture & style improvment

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -104,6 +104,15 @@ h3 {
     height: auto;
     padding: 0px 15px;
 }
+.content-wide {
+    max-width: 1800px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    grid-gap: 1.5rem;
+    justify-items: center;
+    margin: auto;
+    padding: 0 clamp(1rem, 2vw, 2rem);
+}
 .btn {
     padding: 10px 18px;
     border: 1px solid var(--pirate-doubloon);
