--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -107,11 +107,12 @@ h3 {
 .content-wide {
     max-width: 1800px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(clamp(12rem, 40vw, 18rem), 1fr));
     grid-gap: 1.5rem;
     justify-items: center;
     margin: auto;
     padding: 0 clamp(1rem, 2vw, 2rem);
+    overflow: hidden;
 }
 .btn {
     padding: 10px 18px;
