--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,31 @@
 <!-- footer -->
 <footer>
-  <div>
-    <img class="arrrmada" src="{{ site.baseurl }}/assets/img/logo/arrrmada.png" />
-    <p>
+ 
+  <div class="main-footer-wrap">
+    <div class="main-footer">
+      <div class="footer-columns">
+        <h2 class="footer-heading">ARRRmada</h2>
+      <p>
       ARRRmada.com is open source and maintained by the
       community. Help improve this site on <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Github</a>!
+      </p>
+    </div>
+    <div class="footer-columns">
+      <h2 class="footer-heading">Privacy</h2>
+    <p>
+    ARRRmada.com is open source and maintained by the
+    community. Help improve this site on <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Github</a>!
     </p>
   </div>
-  <div>
-    <img class="discord" src="{{ site.baseurl }}/assets/img/site/discord-pirate.png" />
-    <p>For all inquiries, questions, and discussions, chat with us in the community <a href="https://pirate.black/discord" target="_blank" rel="noopener noreferrer">DISCORD</a></p>
+    <div class="footer-columns">
+      <h2 class="footer-heading">Community</h2>
+     <p>For all inquiries, questions, and discussions, chat with us in the community <a href="https://pirate.black/discord" target="_blank" rel="noopener noreferrer">DISCORD</a></p>
+   </div>
   </div>
+</div>
+<div class="sub-footer-wrap">
+<div class="sub-footer"><span>Social Media: 🟢🔵🟡🟣</span> <span><a>Privacy Policy</a></span><span><a>Terms</a></span> <span><a>FAQ</a></span></div>
+</div>
+
 </footer>
 <a href="#" id="return-to-top" title="Go to top"></a>
