--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,21 +4,26 @@
 
 /* ----- description-section ----- */
 .description-section {
-    background-color: var(--darker-grey);
+    background-color: var(--pirate-gale);
     padding: 100px 0px 60px;
     text-align: center;
     color: var(--text-main);
     position: relative;
 }
 .description-section .content {
+    display: flex;
+    justify-content: center;
     margin-bottom: 100px;
+    flex-wrap: wrap;
+    gap: 3rem;
+    
 }
 .description-section .description {
-    padding: 40px 60px;
+    /* padding: 40px 60px; */
     width: 100%;
-    max-width: 700px;
-    display: inline-block;
-    margin: auto;
+    max-width: 870px;
+ 
+    
 }
 .description-section .description h3 {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.205); 
@@ -51,30 +56,28 @@
         margin-inline: auto;
   }
   .description-section .description h3 {
-        text-align: center;
         margin-bottom: 40px;
   }
 }
 .description-section .merchants {
-    display: inline-block;
-    width: 100%;
-    max-width: 500px;
-    text-align: center;
-    vertical-align: top;
+    border-radius: 50%;
+    display: flex;
+    width: 270px;
+    height:270px;
+    aspect-ratio: 1/1;
     color: var(--pirate-cloud);
     font-size: 18px;
+    background: var(--pirate-smoke-blue);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
 }  
 .description-section .merchants img {
-    display: block;
-    width: 100%;
-    max-width: 40px;
-    margin: auto;
-    margin-top: 100px;
+    max-width: 4.5rem;
 }
 .description-section .merchants .count {
-    margin: 20px auto 10px;
-    font-size: 64px;
-    display: block;
+    font-size: 3rem;
 }
 
 /* ----- merchants-section ----- */
@@ -82,6 +85,7 @@
     text-align: center;
     background-color: var(--dark);
     padding: 160px 0px 80px;
+    overflow: hidden;
 }
 .merchants-section h2 {
     font-size: 3em;
@@ -92,7 +96,7 @@
     justify-content: space-between;
     width: 100%; 
     padding: 1rem;
-    background-color: #3437475c;
+    background-color: var(--pirate-smoke-blue);
     margin: 18px 12px;
     border: 1px solid transparent;
     border-radius: 7px;
