--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -101,6 +101,7 @@ html {
     background-color: var(--darkest); 
     width: 100%; 
     height: 100%; 
+    min-width: 280px;
     scroll-behavior: smooth; 
 }
 body {
