--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -103,7 +103,7 @@
     box-shadow: 5px 5px 10px rgb(0 0 0 / 5%), 8px 8px 16px rgb(0 0 0 / 14%);
     transition: all 0.3s ease-in-out;
     position: relative;
-    
+    &:hover {transform: translateY(-3px);}
 }
 .merchant-box:hover {
     border: 1px solid #fb9700;
@@ -129,7 +129,7 @@
     width: 100%;
     height: 240px;
     border-radius: 7px;
-    background-color: #1d1e23;
+    background-color: var(--dark);
     padding: 1rem clamp(1rem, 2vw, 2rem);
 }
 .merchant-link-area {
