--- a/assets/css/gateways.css
+++ b/assets/css/gateways.css
@@ -28,15 +28,25 @@
     }
 }
 .gateway-explanation {
-    padding: 12rem 0 7rem;
+    padding: 12rem 0 60px;
     background-color: var(--dark);
     color: var(--text-main);
-    text-align: center;
 }
-.gateway-explanation .p {
+.gateway-explanation .p-logo {
     width: 100%;
-    max-width: 200px;
+    max-width: 170px;
+}
+.gateway-explanation .p-logo-box {
+    display: flex;
+    justify-content: center;
     margin-bottom: 40px;
+    background: var(--darkest);
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
+    aspect-ratio: 1/1;
+    /* Hiden for now */
+    display: none;    
 }
 #gateways .content {
     padding-bottom: 170px;
@@ -48,57 +58,30 @@
     margin-top: 100px;
     margin-bottom: 0px;
 }
-.gateway-explanation h2 {
-    color: var(--pirate-doubloon);
-    font-size: 32px;
-    text-align: center;
-    margin-bottom: 20px;
+.gateway-info {
+    padding-bottom: 10rem;
+    font-size:1.1rem;
 }
-.gateway-explanation .solutions {
-    margin-top: 200px;
-    text-align: center;
-    height: 400px;
-}
-.gateway-explanation .solutions .left-box {
-   float: left;
-   width: 48%;
-   text-align: center;
-}
-.gateway-explanation .solutions img {
-    width: 100%;
-    max-width: 600px;
+.gateway-textbox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: var(--page-width-normal);
     margin: auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    @media (max-width:1000px){align-items: center;}
 }
-.gateway-explanation .solutions .right-box {
-    width: 48%;
-    float: right;
-    vertical-align: top;
+.gateway-textbox:last-child {
+    margin-top: 2rem;
+}
+.gateway-textbox  h2 {
+    color: var(--pirate-doubloon);
+    font-size: 2rem;
+}
+.gateway-textbox h2, .gateway-textbox p {
+    margin-bottom: 1rem;
     text-align: left;
+    @media (max-width:1000px){text-align: center;}
 }
-.gateway-explanation .solutions .right-box h2 {
-    text-align: left;
-}
-.gateway-explanation .solutions .right-box p {
-    margin: 18px 0px;
-}
-@media screen and (max-width:1130px) {
-    .gateway-explanation .solutions .right-box,
-    .gateway-explanation .solutions .left-box {
-        float: none;
-        display: block;
-        margin: auto;
-        width: 100%;
-        max-width: 600px;
-    }
-    .gateway-explanation .solutions .right-box {
-        margin-top: 40px;
-    }
-    .gateway-explanation .solutions {
-        height: auto;
-    }
-  }
-
 /* ----- gateways section ----- */
 .gateway-listings-section {
     background: var(--pirate-smoke-blue);
