--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   {% include head.html %}
   <body>
+  {% include header.html %}
   {{ content }}
   {% include footer.html %}
   </body>
