--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -320,9 +320,10 @@ h3 {
     display: flex;
     flex-direction: column;
     position: fixed;
+    top:0;
     z-index: 300;
     box-shadow: 3px 3px 7px #00000040;
-    border-radius: 0 0 11px 0;
+    border-radius: 0 0 .3rem 0;
     overflow: hidden;
     min-width: 205px;
 }
@@ -331,28 +332,30 @@ h3 {
     align-items: center;
     align-content: center;
     justify-content: center;
-    width: 30px;
-    height: 30px;
+    width: 1.8rem;
+    height: 1.8rem;
     aspect-ratio: 1/1;
     padding: 0.2rem;
-    margin: 0.5rem 1rem;
+    margin: 0.3rem 1rem;
     background: var(--dark);
-    color: var(--pirate-fog);
+    color: var(--pirate-doubloon);
     border-radius: 50%;
     font-size: .9rem;
     font-weight: 900;
     cursor: pointer;
-    &:hover {background: var(--pirate-gale); color:var(--pirate-doubloon)}
+    &:hover {background: var(--pirate-smoke-blue); color:var(--pirate-doubloon)}
 }
 .menu-top {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
-    color: var(--dark);
-    font-size: 1.3rem;
+    color: var(--pirate-doubloon);
+    font-size: 1.2rem;
+    font-family: 'Roboto';
     font-weight: 900;
-    background: var(--pirate-doubloon);
+    user-select: none;
+    background: var(--pirate-gale);
 }
 .menu {
     display: none;
