--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -142,7 +142,7 @@ h3 {
 
 .btn, .btn-alt {
     padding: 10px 18px;
-    /* border: 1px solid var(--pirate-doubloon); */
+    border: none;
     display: inline-block;
     width: 240px;
     margin: 8px 6px;
