--- a/assets/css/merchant.css
+++ b/assets/css/merchant.css
@@ -7,6 +7,21 @@
 .merchant-listingBuilder h2 {
     margin-bottom: 10px;
 }
+.listing-box {
+    display: inline-flex;
+    align-items: stretch;
+    flex-direction: column;
+    padding: 2rem;
+    background: var(--pirate-smoke-blue);
+    border-radius: 12px;
+}
+#listing_preview {
+    display: inline-flex;
+    margin-top: 60px;
+}
+#listing_preview, .listing-box {
+    width: 650px;
+}
 label {
     display: block;
     text-align: center;
@@ -38,15 +53,23 @@ input {
 #merchantURLInput {
     max-width: 300px; 
 }
+
+#merchantDescInput, #merchantNameInput, #merchantURLInput {
+    background: var(--pirate-gale);
+    border: 1px solid var(--lighter-grey);
+    border-radius: 4px;
+    color: var(--pirate-cloud);
+}
 #merchantURLButton {
     margin: 0px;
     height: 30px;
     vertical-align: top;
     padding-inline: 20px;
     cursor: pointer;
-    border: 1px solid var(--pirate-neon);
-    background-color: var(--pirate-leviathan);
-    color: var(--pirate-neon)
+    border: none;
+    background-color: var(--pirate-doubloon);
+    color: var(--dark);
+    border-radius: 4px;
 }
 #merchantImageInput {
     height: auto;
@@ -77,16 +100,20 @@ input[type=file]::file-selector-button {
 }
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 10px;
     padding: 10px;
     text-align: left;
     border: none;
 }  
 .grid-item {
+    border-radius: 4px;
     border: none;
     min-width: 200px;
     color: var(--text-main);
+    background: #292c35;
+    padding: 0.3rem .9rem;
+    text-align: left;
 }
 .grid-container label {
     display: inline-block;
