Menu and decoder improvements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <section class="header">
-    <div class="menu-top"><span id="openCloseBtn" class="open-close__btn">X</span><span class="menu-title">Menu</span></div>
+    <div class="menu-top"><span id="openCloseBtn" class="open-close__btn">M</span></div>
     <nav class="menu">
         <a href="{{ site.baseurl }}/">Merchant List</a>
         <a href="{{ site.baseurl }}/listing_tool">Listing Tool</a>
-        <a href="{{ site.baseurl }}/payment_gateways">Payment Gateways</a>
         <a href="{{ site.baseurl }}/listing_decoder">Listing Decoder</a>
+        <a href="{{ site.baseurl }}/payment_gateways">Payment Gateways</a>
         <a href="{{ site.baseurl }}/donation_buttons">Donation buttons</a>
         <a href="{{ site.baseurl }}/listing_guidelines.html">Listing Guidelines</a>
         <a href="{{ site.baseurl }}/guide">Guide</a>
