--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,16 @@
 <section class="header">
     <div class="menu-top"><span id="openCloseBtn" class="open-close__btn">M</span></div>
     <nav class="menu">
+        <h2 class="menu-h2">User</h2>
         <a href="{{ site.baseurl }}/">Merchant List</a>
         <a href="{{ site.baseurl }}/listing_tool">Listing Tool</a>
-        <a href="{{ site.baseurl }}/listing_decoder">Listing Decoder</a>
         <a href="{{ site.baseurl }}/payment_gateways">Payment Gateways</a>
         <a href="{{ site.baseurl }}/donation_buttons">Donation buttons</a>
         <a href="{{ site.baseurl }}/listing_guidelines.html">Listing Guidelines</a>
         <a href="{{ site.baseurl }}/guide">Guide</a>
+        <h2 class="menu-h2">Maintainer</h2> 
+        <a href="{{ site.baseurl }}/listing_decoder">Listing Decoder</a>
+        <a href="https://github.com/ARRRmada/ARRRmada.com">GitHub Readme</a>
+
     </nav>
 </section>
