--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -366,6 +366,24 @@ h3 {
     border: 1px solid var(--darker-grey);
     margin-left: -1px;
 }
+h2 {
+    font-size: 29px;
+    font-weight: 200;
+    color: var(--pirate-doubloon);
+    font-family: var(--pirate-font-primary);
+    background: var(--pirate-smoke-blue);
+    font-size: 1.1rem;
+    padding: 0.2rem 0.8rem;
+    margin: 0.5rem 0;
+}
+.menu a {
+    color: var(--pirate-mist);
+    font-size: .9rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+    padding-left: 0.5rem;
+    &:hover{color:var(--pirate-doubloon);}
+}
 
 /* ----- footer ----- */
 footer {
