--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -374,11 +374,14 @@ h2 {
     background: var(--pirate-smoke-blue);
     font-size: 1.1rem;
     padding: 0.2rem 0.8rem;
+    margin-bottom: 0.5rem;
+}
+.menu h2:last-of-type {
     margin: 0.5rem 0;
 }
 .menu a {
     color: var(--pirate-mist);
-    font-size: .9rem;
+    font-size: .85rem;
     font-weight: 300;
     line-height: 1.5rem;
     padding-left: 0.5rem;
