More menu improvements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,13 @@
         <a href="{{ site.baseurl }}/payment_gateways">Payment Gateways</a>
         <a href="{{ site.baseurl }}/donation_buttons">Donation buttons</a>
         <a href="{{ site.baseurl }}/listing_guidelines.html">Listing Guidelines</a>
-        <a href="{{ site.baseurl }}/guide">Guide</a>
+        <a href="{{ site.baseurl }}/guide">User Guide</a>
         <h2 class="menu-h2">Maintainer</h2> 
         <a href="{{ site.baseurl }}/listing_decoder">Listing Decoder</a>
-        <a href="https://github.com/ARRRmada/ARRRmada.com">GitHub Readme</a>
-
+        <a href="https://github.com/ARRRmada/ARRRmada.com" target="_blank" rel="noopener noreferrer">GitHub Readme</a>
+        <a href="{{ site.baseurl }}/guide#maintainer">Maintainer Guide</a>
+        <h2 class="menu-h2">Misc</h2> 
+        <a href="#">Report Listing</a>
+        <a href="https://pirate.black/discord/" target="_blank" rel="noopener noreferrer">Community</a>
     </nav>
 </section>
