--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <a href="{{ site.baseurl }}/donation_buttons">Donation buttons</a>
         <a href="{{ site.baseurl }}/listing_guidelines.html">Listing Guidelines</a>
         <a href="{{ site.baseurl }}/guide">User Guide</a>
-        <h2 class="menu-h2">Maintainer</h2> 
+        <h2 class="menu-h2">Maintainers</h2> 
         <a href="{{ site.baseurl }}/listing_decoder">Listing Decoder</a>
         <a href="https://github.com/ARRRmada/ARRRmada.com" target="_blank" rel="noopener noreferrer">GitHub Readme</a>
         <a href="{{ site.baseurl }}/guide#maintainer">Maintainer Guide</a>
