--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <section class="header">
     <div class="menu-top"><span id="openCloseBtn" class="open-close__btn">M</span></div>
     <nav class="menu">
-        <h2 class="menu-h2">User</h2>
+        <h2 class="menu-h2">Users</h2>
         <a href="{{ site.baseurl }}/">Merchant List</a>
         <a href="{{ site.baseurl }}/listing_tool">Listing Tool</a>
         <a href="{{ site.baseurl }}/payment_gateways">Payment Gateways</a>
