--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -342,7 +342,7 @@ h3 {
     font-weight: 900;
     cursor: pointer;
     transition-duration: .5s;
-    &:hover {background: var(--pirate-smoke-blue); color:var(--pirate-doubloon); transform:rotate(359deg) transition-duration: .5s;}
+    &:hover {background: var(--pirate-smoke-blue); color:var(--pirate-doubloon); transform:rotate(359deg); transition-duration: .5s;}
 }
 .menu-top {
     display: flex;
