--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,10 +7,37 @@
     font-family: 'Poppins'; 
     src: url("../fonts/Poppins/Poppins-Regular.ttf") format('truetype'); 
 }
-@font-face { 
-    font-family: 'Roboto'; 
-    src: url("../fonts/Roboto/Roboto-Regular.ttf") format('truetype'); 
+
+@font-face {
+    font-family: 'Roboto Thin';
+    src: url("../fonts/Roboto/Roboto-Thin.ttf") format('truetype');
+    font-weight: 100;
 }
+
+@font-face {
+    font-family: 'Roboto Light';
+    src: url("../fonts/Roboto/Roboto-Light.ttf") format('truetype');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url("../fonts/Roboto/Roboto-Regular.ttf") format('truetype');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Roboto Medium';
+    src: url("../fonts/Roboto/Roboto-Medium.ttf") format('truetype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Roboto Black';
+    src: url("../fonts/Roboto/Roboto-Black.ttf") format('truetype');
+    font-weight: 900;
+}
+
 @font-face { 
     font-family: 'IBM Plex Mono'; 
     src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf") format('truetype'); 
