--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,33 +9,38 @@
 }
 
 @font-face {
-    font-family: 'Roboto Thin';
+    font-family: 'Roboto';
     src: url("../fonts/Roboto/Roboto-Thin.ttf") format('truetype');
     font-weight: 100;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'Roboto Light';
+    font-family: 'Roboto';
     src: url("../fonts/Roboto/Roboto-Light.ttf") format('truetype');
     font-weight: 300;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
     src: url("../fonts/Roboto/Roboto-Regular.ttf") format('truetype');
     font-weight: 400;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'Roboto Medium';
+    font-family: 'Roboto';
     src: url("../fonts/Roboto/Roboto-Medium.ttf") format('truetype');
     font-weight: 500;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'Roboto Black';
+    font-family: 'Roboto';
     src: url("../fonts/Roboto/Roboto-Black.ttf") format('truetype');
     font-weight: 900;
+    font-style: normal;
 }
 
 @font-face { 
