--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto Condensed';
     src: url("../fonts/Roboto/Roboto-Thin.ttf") format('truetype');
     font-weight: 100;
     font-style: normal;
